--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,11 +7,12 @@
     <link type="text/css" href="/static/css/argon.css" rel="stylesheet">
     <link type="text/css" href="/static/js/plugins/nucleo/css/nucleo.css" rel="stylesheet" />
     <link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="/static/css/temp.css">
     {% block css %}
     {% endblock %}
 </head>
 
-<body class="bg-gradient-dark">
+<body class="bg-dark-blue">
 <nav class="navbar navbar-vertical fixed-left navbar-expand-md navbar-light bg-white" id="sidenav-main">
     <div class="container-fluid">
         <!-- Toggler -->
@@ -68,14 +69,12 @@
             <div class="navbar-collapse-header d-md-none">
                 <div class="row">
                     <div class="col-6 collapse-brand">
-                        <a href="{{ url_for('view_deployments') }}">
+                        <a href="{{ back_url }}">
                             <img src="static/img/Logos/Default.png">
                         </a>
                     </div>
                     <div class="col-6 collapse-close">
                         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#sidenav-collapse-main" aria-controls="sidenav-main" aria-expanded="false" aria-label="Toggle sidenav">
-                            <span></span>
-                            <span></span>
                         </button>
                     </div>
                 </div>
@@ -120,7 +119,7 @@
     <nav class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
         <div class="container-fluid">
             <!-- Brand -->
-            <a class="h2 mb-0 text-white text-uppercase d-none d-lg-inline-block" href="{{ url_for('view_deployments') }}">{{ title }}</a>
+            <a class="h2 mb-0 text-white text-uppercase d-none d-lg-inline-block" href="{{ back_url }}">{{ title }}</a>
             <!-- Form -->
             <form class="navbar-search navbar-search-dark form-inline mr-3 d-none d-md-flex ml-lg-auto">
                 <div class="form-group mb-0">
