--- a/app/templates/incident.html
+++ b/app/templates/incident.html
@@ -7,7 +7,7 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col">
-                        <h3 class="card-title text-uppercase mb-0">Assigned To</h3>
+                        <h3 class="card-title text-uppercase mb-1">Assigned To</h3>
                         {% if incident.assigned_to %}
                         {% for user in incident.assigned_to %}
                         <div class="avatar-group">
@@ -27,45 +27,41 @@
                         </div>
                     </div>
                 </div>
-
                 <p class="mt-3 mb-0 text-muted text-sm">
                     <span class="text-nowrap">Created {{ moment(incident.created_at).fromNow() }}</span>
-
                 </p>
             </div>
         </div>
     </div>
-        <div class="col-xl-3 col-lg-6">
+    {% set percentage = incident.calculate_task_percentage() %}
+    {% if percentage != None %}
+    <div class="col-xl-4 col-lg-6">
         <div class="card card-stats mb-4 mb-xl-0">
             <div class="card-body">
                 <div class="row">
                     <div class="col">
-                        <h3 class="card-title text-uppercase mb-0">Completion</h3>
-                        {% if incident.calculate_task_percentage() != None %}
-                        <span class="h5 font-weight-bold mb-0">{% if incident.calculate_task_percentage() == 100 %}Completed{% else %}{{ incident.calculate_task_percentage() }}%{% endif %}</span>
+                        <h3 class="card-title text-uppercase mb-4">{% if percentage == 100 %}Completed{% else %}Completion - {{ percentage }}%{% endif %}</h3>
                         <div>
                             <div class="progress">
                                 <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="60"
                                      aria-valuemin="0" aria-valuemax="100"
-                                     style="width: {{ incident.calculate_task_percentage() }}%;"></div>
+                                     style="width: {{ percentage }}%;"></div>
                             </div>
                         </div>
-                        {% else %}
-                        <span class="h5 font-weight-bold mb-0">None</span>
-                        {% endif %}
                     </div>
                     <div class="col-auto">
                         <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
                             <i class="fas fa-tasks"></i>
                         </div>
                     </div>
-                    <p class="mt-3 mb-0 text-muted text-sm">
+                </div>
+                <p class="mt-3 mb-0 text-muted text-sm">
                         <span class="text-nowrap">Last updated {{ moment(incident.created_at).fromNow() }}</span>
                     </p>
-                </div>
             </div>
         </div>
     </div>
+    {% endif %}
     <div class="col-xl-3 col-lg-6">
         <div class="card card-stats mb-4 mb-xl-0">
             <div class="card-body">
@@ -95,13 +91,13 @@
 <div class="row mt-5">
     <div class="col-xl-6 col-lg-6">
         <div class="card">
-            <div class="card-header bg-gradient-danger"><h3 class="text-white text-uppercase">Incident Overview</h3></div>
+            <div class="card-header bg-primary"><h3 class="text-white text-uppercase">Incident Overview</h3></div>
             <div class="card-body">
                 <div class="row">
                     <div class="col">
                         <h3 class="card-title">{{ incident.name }}</h3>
                         <p class="card-text"><b>Location:</b> {{ incident.location }}</p>
-                        <p class="card-text"><b>Initial Description:</b> {{ incident.description }}</p>
+                        <p class="card-text"><b>Description:</b> {{ incident.description }}</p>
                     </div>
                 </div>
             </div>
@@ -121,7 +117,7 @@
                         </div>
                         {% endfor %}
                         {% else %}
-                        <p>None</p>
+                        <p class="card-text">None</p>
                         {% endif %}
                     </div>
 
