--- a/app/templates/incidents.html
+++ b/app/templates/incidents.html
@@ -171,17 +171,18 @@
                             </td>
                             <td class="completion">
                                 <div class="d-flex align-items-center">
-                                    {% if incident.calculate_task_percentage() == None %}
+                                    {% set percentage = incident.calculate_task_percentage() %}
+                                    {% if percentage == None %}
                                     None
-                                    {% elif incident.calculate_task_percentage() == 100 %}
+                                    {% elif percentage == 100 %}
                                     Completed
                                     {% else %}
-                                    <span class="mr-2">{{ incident.calculate_task_percentage() }}%</span>
+                                    <span class="mr-2">{{ percentage }}%</span>
                                     <div>
                                         <div class="progress">
                                             <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="60"
                                                  aria-valuemin="0" aria-valuemax="100"
-                                                 style="width: {{ incident.calculate_task_percentage() }}%;"></div>
+                                                 style="width: {{ percentage }}%;"></div>
                                         </div>
                                     </div>
                                     {% endif %}
