--- a/app/static/css/temp.css
+++ b/app/static/css/temp.css
@@ -33,7 +33,6 @@
 }
 
 .icon-shape {
-
     padding: 12px;
     text-align: center;
     display: inline-flex;
@@ -43,7 +42,6 @@
 
 }
 .icon {
-
     width: 3rem;
     height: 3rem;
 
@@ -82,4 +80,9 @@ input[type=checkbox][disabled]{
 tr:hover {
     cursor: pointer;
     background-color: #f6f8fe !important;
+}
+
+.clock {
+    margin-top: 1rem !important;
+    margin-bottom: 1.7rem !important;
 }
